# essentials

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg  version.py
.github/workflows/: main.yml
classes/: singleton.py  temdir.py
classes/tests/: test_singleton.py  test_temdir.py
decorators/: exception_wrapper.py
decorators/tests/: test_exception_wrapper.py
schemas/: essential_types.py
tests/: test_version.py
tests/classes/: test_temdir.py
tests/utils/: test_file_utils.py
utils/: file_utils.py
