[tool.poetry]
name = "essentials"
version = "0.1.0"
description = ""
authors = ["Dmitriev Andrey <justkeepwalking@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.4"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
coverage = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
line_length = 120
force_single_line = true

[tool.mypy]
python_version = 3.11
check_untyped_defs = true
